{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 43,
  "lineage": "af239bc9-f340-564d-9604-29396dbcbe5a",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0abf5cfabfe4a52cf",
            "arn": "arn:aws:ec2:ap-northeast-2:307946660153:elastic-ip/eipalloc-0abf5cfabfe4a52cf",
            "association_id": "eipassoc-013593cd78fe82652",
            "domain": "vpc",
            "id": "eipalloc-0abf5cfabfe4a52cf",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0a47f2da50e17cb66",
            "private_dns": "ip-192-168-1-118.ap-northeast-2.compute.internal",
            "private_ip": "192.168.1.118",
            "public_dns": "ec2-3-36-22-203.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.22.203",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "minho-nat-eip"
            },
            "tags_all": {
              "Name": "minho-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:307946660153:internet-gateway/igw-04f4d166c22fcfaf3",
            "id": "igw-04f4d166c22fcfaf3",
            "owner_id": "307946660153",
            "tags": {
              "Name": "minho-igw"
            },
            "tags_all": {
              "Name": "minho-igw"
            },
            "vpc_id": "vpc-0ebbd21c546c5aede"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0abf5cfabfe4a52cf",
            "association_id": "eipassoc-013593cd78fe82652",
            "connectivity_type": "public",
            "id": "nat-0c298787cc25ebe56",
            "network_interface_id": "eni-0a47f2da50e17cb66",
            "private_ip": "192.168.1.118",
            "public_ip": "3.36.22.203",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-067be295010e3c628",
            "tags": {
              "Name": "minho-nat-gateway"
            },
            "tags_all": {
              "Name": "minho-nat-gateway"
            },
            "timeouts": {
              "create": "10m",
              "delete": "30m"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:307946660153:network-acl/acl-09f14ada90b64cd81",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09f14ada90b64cd81",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "307946660153",
            "subnet_ids": [
              "subnet-016123cb405d9da24",
              "subnet-0399feba70ef1f5cc",
              "subnet-067be295010e3c628",
              "subnet-09019be05015a458d"
            ],
            "tags": {
              "Name": "minho-acl"
            },
            "tags_all": {
              "Name": "minho-acl"
            },
            "vpc_id": "vpc-0ebbd21c546c5aede"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:307946660153:route-table/rtb-060bcbef17147e328",
            "id": "rtb-060bcbef17147e328",
            "owner_id": "307946660153",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c298787cc25ebe56",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "minho-private-route-table"
            },
            "tags_all": {
              "Name": "minho-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebbd21c546c5aede"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:307946660153:route-table/rtb-06e5257d25647679e",
            "id": "rtb-06e5257d25647679e",
            "owner_id": "307946660153",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f4d166c22fcfaf3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "minho-public-route-table"
            },
            "tags_all": {
              "Name": "minho-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebbd21c546c5aede"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0226f6e03d7c57535",
            "route_table_id": "rtb-060bcbef17147e328",
            "subnet_id": "subnet-0399feba70ef1f5cc"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.gw",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032c744ebda503388",
            "route_table_id": "rtb-060bcbef17147e328",
            "subnet_id": "subnet-09019be05015a458d"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.gw",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5de5cc687a39eee",
            "route_table_id": "rtb-06e5257d25647679e",
            "subnet_id": "subnet-067be295010e3c628"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dd83f0a55b5c855",
            "route_table_id": "rtb-06e5257d25647679e",
            "subnet_id": "subnet-016123cb405d9da24"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:307946660153:subnet/subnet-0399feba70ef1f5cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0399feba70ef1f5cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307946660153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "minho-private-subnet-subnet1"
            },
            "tags_all": {
              "Name": "minho-private-subnet-subnet1"
            },
            "vpc_id": "vpc-0ebbd21c546c5aede"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:307946660153:subnet/subnet-09019be05015a458d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09019be05015a458d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307946660153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "minho-private-subnet-subnet2"
            },
            "tags_all": {
              "Name": "minho-private-subnet-subnet2"
            },
            "vpc_id": "vpc-0ebbd21c546c5aede"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:307946660153:subnet/subnet-067be295010e3c628",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067be295010e3c628",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307946660153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "minho-public-subnet-subnet1"
            },
            "tags_all": {
              "Name": "minho-public-subnet-subnet1"
            },
            "vpc_id": "vpc-0ebbd21c546c5aede"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:307946660153:subnet/subnet-016123cb405d9da24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016123cb405d9da24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307946660153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "minho-public-subnet-subnet2"
            },
            "tags_all": {
              "Name": "minho-public-subnet-subnet2"
            },
            "vpc_id": "vpc-0ebbd21c546c5aede"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:307946660153:vpc/vpc-0ebbd21c546c5aede",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0bb591e0aa8deda71",
            "default_route_table_id": "rtb-0ad200646a04a5f68",
            "default_security_group_id": "sg-0c8a973f2968bf7a7",
            "dhcp_options_id": "dopt-0119d6e08d026b53c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ebbd21c546c5aede",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ad200646a04a5f68",
            "owner_id": "307946660153",
            "tags": {
              "Name": "minho-vpc"
            },
            "tags_all": {
              "Name": "minho-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:307946660153:security-group/sg-0cf5a81a42d5999c1",
            "description": "Allow inbound traffic on port 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf5a81a42d5999c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow MySQL access from anywhere",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "minho-rds-sg",
            "name_prefix": "",
            "owner_id": "307946660153",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ebbd21c546c5aede"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:307946660153:security-group/sg-082d99f7ea2f9246c",
            "description": "Allow all inbound IPv4 traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082d99f7ea2f9246c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "minho-sg",
            "name_prefix": "",
            "owner_id": "307946660153",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ebbd21c546c5aede"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}